ci go-migrate fixes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         image: postgres
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: pass
+          POSTGRES_PASSWORD: password
           POSTGRES_DB: images
         options: >-
           --health-cmd pg_isready
