--- a/app.env
+++ b/app.env
@@ -1,5 +1,5 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://postgres:password@postgres:5432/images?sslmode=disable
+DB_SOURCE=postgresql://postgres:password@localhost:5432/images?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
 SECRET_KEY=283727067402743578448924842430644
 ACCESS_TOKEN_DURATION=12h
